Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14342

Cannot add Kit environment variables using SDKtool

XMLWordPrintable

    • b2e3f0262bbf5de4fea24207cd824e162e8e59e4

      During installation, Qt Embedded adds cross-compilation kits using sdktool addTC, addQt and addKit. Now if we want to set environment variables for the Kit, it does not seem to be possible.

      1. There is no "--environment" option to the addKit command
      2. Even if adding the environment as an extra key-value pair option, e.g.
        addKit ... PE.Profile.Environment QVariantList:FOO=42,BAR=/dev/null
        it will be added ok to the SDK profiles.xml, but creator ignores that setting (i.e. fails to copy it)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            vgt Eirik Aavitsland
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes