Sdktool: Add switch to set environment for kits.

Use --env TEST=somevalue or --env TEST (to unset TEST) once per
environment variable you want to set/unset.

Task-number: QTCREATORBUG-14342
Change-Id: Ia968aeb55a9702d12bc0beb9a38bdd8309a18559
Reviewed-by: Rainer Keller <rainer.keller@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>